force-app/main/default/objects/Account/fields/Cases_for_Previous_Month__c.field-meta.xml
<CustomField>
    <fullName>Cases_for_Previous_Month__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cases for Previous Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>