force-app/main/default/objects/Account/fields/Count_of_Cases_Monthly_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Cases_Monthly_Allowed__c</fullName>
    <formula>VALUE(TEXT(Number_of_Cases_Monthly_Allowed__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Cases Monthly Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>