force-app/main/default/objects/Account/fields/Number_of_Cases_Monthly_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cases_Monthly_Allowed__c</fullName>
    <label>Number of Cases Monthly Allowed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <default>true</default>
                <label>5</label>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>